Closed
Bug 1676862
Opened 5 years ago
Closed 5 years ago
picture-in-picture crash with SWGL
Categories
(Core :: Graphics: WebRender, defect, P3)
Core
Graphics: WebRender
Tracking
()
RESOLVED
FIXED
86 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox83 | --- | disabled |
| firefox84 | --- | disabled |
| firefox85 | --- | disabled |
| firefox86 | --- | fixed |
People
(Reporter: nical, Assigned: lsalzman)
References
(Blocks 1 open bug)
Details
(Keywords: crash)
Crash Data
Attachments
(2 files)
Getting this crash when using picture-in-picture with WR+SWGL
Reproduces 100% on Linux at least, I haven't tried elsewhere.
Crash report: https://crash-stats.mozilla.org/report/index/01d4caa0-95ea-4ec4-9c80-3746e0201106
MOZ_CRASH Reason: called `Option::unwrap()` on a `None` value
Top 10 frames of crashing thread:
0 libxul.so RustMozCrash mozglue/static/rust/wrappers.cpp:17
1 libxul.so mozglue_static::panic_hook mozglue/static/rust/lib.rs:89
2 libxul.so core::ops::function::Fn::call /builds/worker/fetches/rustc/lib/rustlib/src/rust/library/core/src/ops/function.rs:70
3 libxul.so std::panicking::rust_panic_with_hook library/std/src/panicking.rs:573
4 libxul.so std::panicking::begin_panic_handler::{{closure}} library/std/src/panicking.rs:476
5 libxul.so std::sys_common::backtrace::__rust_end_short_backtrace library/std/src/sys_common/backtrace.rs:153
6 libxul.so rust_begin_unwind library/std/src/panicking.rs:475
7 libxul.so core::panicking::panic_fmt library/core/src/panicking.rs:85
8 libxul.so core::panicking::panic library/core/src/panicking.rs:50
9 libxul.so webrender_bindings::swgl_bindings::SwCompositor::queue_composite gfx/webrender_bindings/src/swgl_bindings.rs:954
| Assignee | ||
Updated•5 years ago
|
Blocks: sw-wr-correctness
| Assignee | ||
Updated•5 years ago
|
Severity: -- → S3
Priority: -- → P3
| Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
| Assignee | ||
Updated•5 years ago
|
Keywords: leave-open
Pushed by lsalzman@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/be565446b7d6
add some debug asserts to discern if/why SWGL LockFramebuffer fails. r=aosmond
| Assignee | ||
Comment 3•5 years ago
|
||
Comment 4•5 years ago
|
||
| bugherder | ||
Pushed by lsalzman@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6e726f9e1812
ensure wr_notifier_wake_up passes through UpdateAndRender. r=mstange
Comment 7•5 years ago
|
||
| bugherder | ||
| Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
status-firefox83:
--- → disabled
status-firefox84:
--- → disabled
status-firefox85:
--- → disabled
status-firefox86:
--- → fixed
status-firefox-esr78:
--- → unaffected
Target Milestone: --- → 86 Branch
Updated•5 years ago
|
Blocks: sw-wr-stability
Updated•5 years ago
|
No longer blocks: sw-wr-correctness
You need to log in
before you can comment on or make changes to this bug.
Description
•