Bug 1676862 - add some debug asserts to discern if/why SWGL LockFramebuffer fails. r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D99724